<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimalAddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_animal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/animal_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_animal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/animal_type" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_animal_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/animal_photo_url" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>